2014-08-16 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm-sz.c: Regenerate table of known maximum
	instruction sizes for the software float fallback,
	that implements "virtual" float registers in the stack
	and operations as calls to libgcc.

	* size.c: Correct typo in the generated jit_arm-sz.c file.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

        * include/lightning/jit_alpha.h, lib/jit_alpha-cpu.c,
        lib/jit_alpha-fpu.c, lib/jit_alpha-sz.c, lib/jit_alpha.c:
	New files implementing a lightning Alpha port. Thanks
	to Trent Nelson and snakebit.net staff for providing access
	to an Alpha system.

        * check/float.tst, check/lightning.c, configure.ac,
        include/lightning.h, include/lightning/Makefile.am,
        include/lightning/jit_private.h, lib/Makefile.am,
        lib/jit_disasm.c, lib/jit_size.c, lib/lightning.c:
	Minor changes to adapt for the new Alpha port.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Always mark JIT_RET and JIT_FRET as
	live in a function epilog. This is required because
	on some ports a complex sequence, allocating one or more
	registers, may be required to jump from a ret* to the
	epilog, and the lightning api does not have annotations
	to know if a function returns a value, or the type of
	the return value.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Change the correct live bitmask of
	return registers after a function call in jit_update.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/lightning.c: Change assertions to have an int
	result and correct a bad bit mask assertion.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64.c: Correct bad setup for assertion
	of consistency before a patch.

2014-08-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_mips-cpu.c: Correct typo in the jit_bmsr
	implementation that was using the wrong test result
	register.

2014-07-28 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_memory.c: Do not call free on NULL pointers.
