@@ -83,11 +83,11 @@ jit_register_t		_rvs[] = {
     { rc(fpr) | 0x0d,			"$f13" },
     { rc(fpr) | 0x0e,			"$f14" },
     { rc(fpr) | 0x0f,			"$f15" },
-    { rc(sav) | rc(fpr) | 0x15,		"$f21" },
-    { rc(sav) | rc(fpr) | 0x14,		"$f20" },
-    { rc(sav) | rc(fpr) | 0x13,		"$f19" },
-    { rc(sav) | rc(fpr) | 0x12,		"$f18" },
-    { rc(sav) | rc(fpr) | 0x11,		"$f17" },
+    { rc(arg) | rc(fpr) | 0x15,		"$f21" },
+    { rc(arg) | rc(fpr) | 0x14,		"$f20" },
+    { rc(arg) | rc(fpr) | 0x13,		"$f19" },
+    { rc(arg) | rc(fpr) | 0x12,		"$f18" },
+    { rc(arg) | rc(fpr) | 0x11,		"$f17" },
     { rc(arg) | rc(fpr) | 0x10,		"$f16" },
     { rc(fpr) | 0x16,			"$f22" },
     { rc(fpr) | 0x17,			"$f23" },
